# reclaim-copy-pastable

./: README.md
aleph/: Cargo.toml  lib.rs
evm/: .gitignore  README.md  next.config.js  package-lock.json  package.json
evm/config/: constants.ts
evm/lib/: wallet.ts
evm/public/: sw.js
evm/src/: wagmi.ts
evm/src/components/: ConnectButton.tsx  ConnectKitButton.tsx  Connected.tsx  Hero.tsx  Navbar.tsx  SwtichNetwork.tsx  VerifyProof.tsx  providers.tsx
evm/src/contracts-artifacts/: abi.ts
evm/src/pages/: _app.tsx  index.tsx
